[ADD] Add icon to project

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="" type="image/x-icon">
+        <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
         
         <!--=============== ICONS ===============-->
         
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./assets/css/">
 
         <title>Portfolio</title>
     </head>
@@ -45,6 +45,6 @@
         <script src=""></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src=""></script>
+        <script src="./assets/JS/main.js"></script>
     </body>
 </html>
