--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
-                    <a download="" href="assets/pdf/Gianell-Cv.pdf" class="button">
+                    <a download="" href="assets/pdf/MikaelPizzi-Cv.pdf" class="button">
                         Download CV <i class="ri-download-line"></i>
                     </a>
 
