--- a/index.html
+++ b/index.html
@@ -103,14 +103,11 @@
                     </div>
 
                    <!--=============== DESCRIPTION ===============-->
-                   <div data-content id="description">
-                    <article style="display: flex;
-                    justify-content: center;
-                    margin: 0 8%;">
-                        <p style="text-align: center;">I like to change the world for the better, a fast learner with ambitious goals.
-                            In the free time I like creating value content about the thing I've learned.</p>
-                    </article>
-                </div>
+                    <div class="description__content grid" data-content id="description">
+                        <article>
+                            <p class="description__text">I like to change the world for the better, a fast learner with ambitious goals. In the free time I like creating value content about the thing I've learned.</p>
+                        </article>
+                    </div>
                    <!--=============== SKILLS ===============-->
                     <div class="skills__content grid" data-content id="skills">
                         <div class="skills__area">
