[IMP] Improve minor code details

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <body>
         <!--=============== HEADER ===============-->
         <header class="profile container">
-            <!-- Theme button -->
+            <!-- Theme Button -->
             <i class="ri-moon-line change-theme" id="theme-button"></i>
 
             <div class="profile__container grid">
                 <div class="profile__data">
                     <div class="profile__border">
                         <div class="profile__perfil">
-                            <!-- Insert your image, according to the example size of the portfolio -->
+                            <!-- Profile Image -->
                             <img src="assets/img/profile.png" alt="">
                         </div>
                     </div>
@@ -84,11 +84,12 @@
                 </ul>
 
                 <div class="filters__sections">
+
                     <!--=============== PROJECTS ===============-->
                     <div class="projects__content grid filters__active" data-content id="projects">
                         <article class="projects__card">
-                            <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/project1.jpg" alt="" class="projects__img">
+                            <!-- Project image in rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
+                            <img src="assets/img/project1.jpg" alt="Management System CRUD Web App" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
@@ -108,6 +109,7 @@
                             <p class="description__text">I like to change the world for the better, a fast learner with ambitious goals. In the free time I like creating value content about the thing I've learned.</p>
                         </article>
                     </div>
+
                    <!--=============== SKILLS ===============-->
                     <div class="skills__content grid" data-content id="skills">
                         <div class="skills__area">
@@ -221,7 +223,6 @@
                 </div>
             </section>
         </main>
-
 
         <!--=============== FOOTER ===============-->
         <footer class="footer container">
