[FIX] Fix typo in description

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                    <!--=============== DESCRIPTION ===============-->
                     <div class="description__content grid" data-content id="description">
                         <article>
-                            <p class="description__text">I like to change the world for the better, a fast learner with ambitious goals. In the free time I like creating value content about the thing I've learned.</p>
+                            <p class="description__text">I like to change the world for the better, a fast learner with ambitious goals. In the free time I like creating value content about the things I've learned.</p>
                         </article>
                     </div>
 
