[FIX] Fix typo in link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                     <div class="profile__buttons-small">
                         <!-- Twitter -->
-                        <a href="https://twitter.com/mikaelpizzi" target="_blank" class="button button__small button__gray">
+                        <a href="https://twitter.com/mikaelpizzi/" target="_blank" class="button button__small button__gray">
                             <i class="ri-twitter-line"></i>
                         </a>
                         <!-- Instagram -->
